--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@
 # ignore ROOT files - we do not want them on git
 *.root
 
+# swp and other text editor stuff
+*~
+*.swp
+
 # mysterious file
 .DS_Store
