--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   
 variables:
   GIT_STRATEGY: fetch
-  GIT_SUBMODULE_STRATEGY: recursive
+#  GIT_SUBMODULE_STRATEGY: recursive
 
 before_script:
   - source /home/atlas/release_setup.sh
