--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
 
 before_script:
   - export ATLAS_LOCAL_ROOT_BASE=/cvmfs/atlas.cern.ch/repo/ATLASLocalRootBase
-  - source ${ATLAS_LOCAL_ROOT_BASE}/user/atlasLocalSetup.sh
+  - source ${ATLAS_LOCAL_ROOT_BASE}/user/atlasLocalSetup.sh || true
   - export MAKEFLAGS="-j`nproc` -l`nproc`"
 
 .analysis_image: &image
