--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,9 +23,9 @@ compile_core:
   script:
     - pwd
     - ls *
-    - lsetup git
-    - lsetup "root 6.14.04-x86_64-slc6-gcc62-opt
-    - lsetup cmake
+    - lsetup git || true
+    - lsetup "root 6.14.04-x86_64-slc6-gcc62-opt || true
+    - lsetup cmake || true
     - mkdir build
     - cd build 
     - cmake ..
