--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,18 @@ project(ExoStats)
 list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
 
 #---Locate the ROOT package and defines a number of variables (e.g. ROOT_INCLUDE_DIRS)
-find_package(ROOT REQUIRED COMPONENTS RIO Net Tree RooFitCore RooFit RooStats Minuit HistFactory)
+find_package(ROOT REQUIRED COMPONENTS Graf Hist Gpad Matrix MathCore RIO Net Tree RooFitCore RooFit RooStats Minuit HistFactory )
 
 #---Define useful ROOT functions and macros (e.g. ROOT_GENERATE_DICTIONARY)
-include(${ROOT_USE_FILE})
+if(DEFINED ENV{ROOT_USE_FILE})
+  include(${ROOT_USE_FILE})
+endif() 
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS})
 add_definitions(${ROOT_CXX_FLAGS})
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} $ENV{ROOTSYS}/cmake/modules)
+include(RootNewMacros) 
 #ROOT_GENERATE_DICTIONARY(G__ExoStats Event.h LINKDEF EventLinkDef.h)
 #ROOT_GENERATE_DICTIONARY(G__ExoStats Minimization.h AsimovDataMaking.h AsymptoticsCLsRunner.h HistFactoryInspector.h RooExpandedFitResult.h LINKDEF LinkDef.h)
 ROOT_GENERATE_DICTIONARY(G__ExoStats RooExpandedFitResult.h LINKDEF LinkDef.h)
@@ -25,6 +29,10 @@ ROOT_GENERATE_DICTIONARY(G__ExoStats RooExpandedFitResult.h LINKDEF LinkDef.h)
 #---Create a shared library with geneated dictionary
 add_library(ExoStats SHARED Minimization.C AsimovDataMaking.C AsymptoticsCLsRunner.C HistFactoryInspector.C RooExpandedFitResult.C FitCrossCheckForLimits.C G__ExoStats.cxx runSig.C runAsymptoticsCLs.C)
 target_link_libraries(ExoStats ${ROOT_LIBRARIES})
+
+if(DEFINED ENV{AtlasProject})
+  add_dependencies(ExoStats StatisticsTools)
+endif()
 
 #---Create  a main program using the library
 #add_executable(runAsymptoticsCLs runAsymptoticsCLs.C)
