--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "StatisticsTools"]
 	path = StatisticsTools
-	url = https://gitlab.cern.ch/atlas-physics/stat/tools/StatisticsTools.git
+	url = ../../atlas-physics/stat/tools/StatisticsTools.git
