--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 # CMakeLists.txt for event package. It creates a library with dictionary and a main program
-cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
+cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+if(${CMAKE_VERSION} VERSION_LESS "3.8.0")
 set (CMAKE_CXX_STANDARD 14)
+else()
+set (CMAKE_CXX_STANDARD 17)
+endif()
 
 project(ExoStats)
 
